# FFmpegPlayer

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.c
app/src/main/java/com/ebrightmoon/ffmpeg/: FFmpegPlayer.java  MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
